compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array1.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "pub fn x() { 2 }\npub fn main() {\n  let a = -1\n  let b = <<a:unit(2)-size(a * 2), a:size(3 + x())-unit(1)>>\n\n  b\n}\n"
---
----- SOURCE CODE
pub fn x() { 2 }
pub fn main() {
  let a = -1
  let b = <<a:unit(2)-size(a * 2), a:size(3 + x())-unit(1)>>

  b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0, main/0]).

-file("project/test/my/mod.gleam", 1).
-spec x() -> integer().
x() ->
    2.

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    A = -1,
B = <<A:(lists:max([(A * 2), 0]))/unit:2, A:(lists:max([(3 + x()), 0]))/unit:1>>,
B.
