compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__bit_array_literal_string_pattern_is_treated_as_utf8.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  case <<>> {\n    <<\"a\", \"b\", _:bits>> -> 1\n    _ -> 2\n  }\n}"
---
----- SOURCE CODE

pub fn main() {
  case <<>> {
    <<"a", "b", _:bits>> -> 1
    _ -> 2
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> integer().
main() ->
    case <<>> of
    <<"a"/utf8, "b"/utf8, _/bitstring>> ->
        1;

    _ ->
        2
end.
