compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__bit_arrays__block_in_pattern_size.snap
---
source: compiler-core/src/erlang/tests/bit_arrays.rs
expression: "\npub fn main() {\n  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let assert <<len, payload:size({ len - 1 } * 8)>> = <<>>
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> bitstring().
main() ->
    _assert_subject = <<>>,
case _assert_subject of
    <<Len, Payload:((Len - 1) * 8)>> -> _assert_subject;
    _assert_fail ->
        erlang:error(#{gleam_error => let_assert,
                    message => <<"Pattern match failed, no pattern matched the value."/utf8>>,
                    file => <<?FILEPATH/utf8>>,
                    module => <<"my/mod"/utf8>>,
                    function => <<"main"/utf8>>,
                    line => 3,
                    value => _assert_fail,
                    start => 19,
                    'end' => 75,
                    pattern_start => 30,
                    pattern_end => 68})
end.
